# qbtx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
notebooks/strategies/: strategy_template.ipynb
notebooks/strategies/filtering/: pca_clustering.ipynb
qbtx/dataloader/: binance_loader.py  coin_gecko_loader.py  loader.py
qbtx/engine/: engine.py
qbtx/evaluate/: MonteCarloSimulation.py  PerformanceReport.py  metrics.py
qbtx/strategy/: simple_strats.py
tests/: test_engine.py
